--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>Holy Peak !!Translateing!! = JOJO</title>
 </head>
 <body>
+
+  <header> 
+    subayuy
+  </header>
   
+    
+
+  <main>
+<div id="name">
+      Portfolio
+    </div>
+
+    
+  </main>
+
+
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script src="js/color.js"></script>
+<script src="js/script.js"></script>
+
 </body>
 </html>
